atualizei algumas coisas

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                 <div class="col">
                     <div class="p-2 text-center mt-5"><label onclick="sobre();">SOBRE MIM</label></div>
                     <div class="p-2 text-center mt-5"><label onclick="habilidade();">HABILIDADES</label></div>
-                    <div class="p-2 text-center mt-5"><label onclick="sobre();">MANGAS</label></div>
-                    <div class="p-2 text-center mt-5"><label onclick="sobre();">HOBBIES</label></div>
+                    <div class="p-2 text-center mt-5"><label onclick="manga();">MANGAS</label></div>
 
                     <div class="row">
                         <h3>Minhas Redes:</h3>
@@ -47,6 +46,7 @@
             <div class="">
                 <p id="sobre"></p>
                 <p id="habilidade"></p>
+                <p id="manga"></p>
             </div>
         </div>
     </div>
